--- a/Frontend/my-app/package.json
+++ b/Frontend/my-app/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.0",
     "font-awesome-icons": "^1.6.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-circular-progressbar": "^2.1.0",
@@ -36,6 +37,7 @@
     "recharts": "^2.1.14",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
